@@ -48,8 +48,9 @@ public interface GroupParams {
 
   // Note: Since you can supply multiple fields to group on, but only have a facets for the whole result. It only makes
   // sense to me to support these parameters for the first group.
-  /** Whether the docSet (for example for faceting) should be based on plain documents (a.k.a UNGROUPED) or on the groups (a.k.a GROUPED). */
-  public static final String GROUP_COLLAPSE = GROUP + ".collapse";
+  /** Whether the docSet (for example for faceting) should be based on plain documents (a.k.a UNGROUPED) or on the groups (a.k.a GROUPED).
+    * The docSet will only the most relevant documents per group. It is if you query for everything with group.limit=1  */
+  public static final String GROUP_TRUNCATE = GROUP + ".truncate";
 
   /** Whether the group count should be included in the response. */
   public static final String GROUP_TOTAL_COUNT = GROUP + ".ngroups";
